--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,9 @@
+:root {
+    --mainFont: 'Neris';
+    --addFont: 'Glametrix';
+    --logoFont: 'Philosopher';
+}
+
 html, body, main {
     min-height: 100%;
     height: 100%;
