correct html5 tags

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -45,7 +45,7 @@
     src: url('Fonts/Forum.otf'); }
 @font-face {
     font-family: 'Glametrix';
-    src: url('Fonts/Glametrix.otf'); }
+    src: url('Fonts/GlametrixLight.otf'); }
 @font-face {
     font-family: 'GunnyRewritten';
     src: url('Fonts/GunnyRewritten.ttf'); }
