--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,10 @@
 :root {
     --btnOneWidth: 15px;
 }
+button#settingsBtn {
+    display: none;
+}
+
 
 
 header {
@@ -15,35 +19,38 @@ header {
     box-shadow: 0px 1px 14px -7px #000;
 }
  
-header logo {
+
+
+
+
+section.header-logo {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     width: calc(37% - 10px);
-    min-width: 290px;
+    max-width: 490px; 
+    min-width: 310px;
     margin-left: 10px; 
 }
-header logo img {
+section.header-logo img {
     height: 36px;
     margin-right: 15px;
 }
-header logo h1 {
+section.header-logo h1 {
     font-size: 36px;
     letter-spacing: 9px;
     font-family: var(--logoFont);
     margin: 0;
 }
-header logo button {
-    display: none;
-}
 
 
 
 
 
 
-header settings { 
+
+section.header-settings { 
     display: flex;
     flex-direction: row;
     flex: 1;
@@ -52,29 +59,31 @@ header settings {
     justify-content: center;
     padding: 0 2%;
 } 
-header settings span {
+div.header-controls, 
+div.header-mobile-scroll {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     position: relative;
     border: 1px solid var(--accentColor);
-    margin: 0 4px;
+    margin-right: 4px;
     border-radius: 3px;
     overflow: hidden;
     height: 30px;
     width: fit-content;
     z-index: 2;
 }
-header settings span.header-theme {
+div.header-theme {
     margin-left: auto;
 }
-header settings span.header-mobile-scroll {
+div.header-mobile-scroll {
     display: none;
 }
 
 
 
-header settings button {
+div.header-controls button,
+div.header-mobile-scroll button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,57 +93,30 @@ header settings button {
     margin: 0;
     border: 0;
     background: none; 
+    font-size: 20px; 
     color: var(--accentColor);
     font-family: var(--addFont);
     letter-spacing: .8px; 
+    line-height: 1; 
 } 
-header settings button:hover {
+div.header-controls button:hover {
     background: var(--headerHoverBcg);
     color: var(--revertColor); 
-}
-header settings button:last-child {
-    border: none;
 } 
-
-header settings button.active-btn {
+div.header-controls button.active-btn {
     background: var(--headerButtonBgc);
     color: #000;
 } 
-
-
-
-span.header-theme button:first-child:not(.active-btn)::after {
-    position: absolute;
-    content: '';
-    width: 1px;
-    height: 80%;
-    right: 0px;
-    background: var(--accentColor);
-}
-span.header-theme button:last-child:not(.active-btn)::after {
-    position: absolute;
-    content: '';
-    width: 1px;
-    height: 80%;
-    left: 0px;
-    background: var(--accentColor);
-}
-
-span.header-language button {
-    font-size: 22px;
-    padding-top: 4px;
+div.header-language button { 
     width: calc( var(--btnOneWidth) * (10/4)  );
 }
-span.header-choosetype button {
-    font-size: 20px;
-    padding-top: 4px;
+div.header-choosetype button { 
     width: calc( var(--btnOneWidth) * (10/2) );
 }
-span.header-theme button { 
+div.header-theme button { 
     width: calc( var(--btnOneWidth) * (10/3) );
 }
-span.header-mobile-scroll button {
-    
+div.header-mobile-scroll button {
     width: calc( var(--btnOneWidth) * (10/1) );
 }
 
@@ -144,10 +126,33 @@ span.header-mobile-scroll button {
 
 
 
+div.header-controls button:not(:last-child)::after{
+    content: '';
+    position: absolute;
+    height: 60%;
+    width: 1px;
+
+    right: 0px; 
+    background-color: var(--accentColor);
+    opacity: .5;
+}
+div.header-controls button.active-btn::after { 
+    content: '';
+    position: absolute;
+    height: 60%;
+    width: 1px;
+    
+    left: -1px;
+    background-color: var(--headerBgc);
+    opacity: 1;
+}
 
 
 
 
-header settings span.header-theme img {
+.active-btn, #mobileScroll {
+    font-weight: 900;
+}
+div.header-theme img {
     transform: scale(0.9);
 } 
