--- a/styles/earth.css
+++ b/styles/earth.css
@@ -1,15 +1,17 @@
-main {
+article {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    flex: 16; 
+    flex: 16;
+    padding: 0 7.5%;
 }
-main div {
+article canvas {
     display: flex;
     justify-content: center;
     align-items: flex-start;
     width: 80%;
+    max-height: 70%;
     /* height: 600px; */
     /* width: 600px; */
     border-radius: 1000px;
