--- a/styles/index.css
+++ b/styles/index.css
@@ -4,11 +4,11 @@
     --logoFont: 'Philosopher';
 }
 
-html, body, main {
+html, body, article {
     min-height: 100%;
     height: 100%;
 }
-html, body, main, .earth-wrapper {
+html, body, article, .earth-wrapper {
     width: 100%;
     margin: 0;
     padding: 0;
@@ -23,7 +23,7 @@ body {
     color: var(--accentColor);
 }
 
-content {
+main {
     display: flex;
     justify-content: flex-start;
     align-items: center;
