--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -1,5 +1,3 @@
-
-
 aside {
     min-height: calc(100% - 80px);
     max-height: calc(100% - 80px);
@@ -22,7 +20,7 @@ aside {
     width: 37%; 
     align-items: center;
     justify-content: flex-start;
-    min-width: 300px;
+    max-width: 490px;
 } 
 aside > * {
     margin: 0 10% 0 15%;
@@ -33,7 +31,8 @@ aside > * {
 
 
 
-ul#sidebarList {
+ul#areaList, 
+ul#riverList {
     position: relative;
     width: -webkit-fill-available; 
     list-style: none;
@@ -41,34 +40,40 @@ ul#sidebarList {
     overflow: auto;
     padding-right: 4px;
 }
-ul#sidebarList::-webkit-scrollbar {
+ul#areaList::-webkit-scrollbar,
+ul#riverList::-webkit-scrollbar {
     width: 7px;
     background: var(--accentColor);
 }
-ul#sidebarList::-webkit-scrollbar-thumb { 
+ul#areaList::-webkit-scrollbar-thumb,
+ul#riverList::-webkit-scrollbar-thumb  { 
     background: var(--sdThumbBgc); 
 }
-ul#sidebarList > li {
+ul#areaList > li, 
+ul#riverList > li {
     background: var(--sdListBgc);
     margin: 4px 0;
     border-radius: 4px;
-    padding: 4px 10px;
-
-     
+    padding: 4px 10px; 
 }
-ul#sidebarList > li:first-child {
+ul#areaList > li:first-child,
+ul#riverList > li:first-child {
     margin: 0;
     margin-bottom: 4px;
 }
-ul#sidebarList > li:last-child {
+ul#areaList > li:last-child, 
+ul#riverList > li:last-child {
     margin: 0;
     margin-top: 4px;
+}
+ul#areaList a:active,
+ul#riverList a:active {
+    color: var(--sdLinkColor);
 }
 
 
 
-
-ul#sidebarList h6 {
+ul#areaList h6 {
     display: flex;
     width: 100%;
     margin: 0;
@@ -79,7 +84,7 @@ ul#sidebarList h6 {
     color: var(--accentColor);
 
 }
-ul#sidebarList div {
+ul#areaList div {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -91,89 +96,60 @@ ul#sidebarList div {
     overflow: hidden;
     transition: max-height .6s;
 }
-ul#sidebarList div a {
-    font-size: 18px;
+ul#areaList a {
     color: var(--sdLinkColor);
-    /* font-weight: 900; */
+    font-weight: 900;
     text-decoration: none;
-    transition: .2s;
-    margin: 2px 0;font-size: 22px;
+    transition: .2s transform, 0s filter;
+    margin: 2px 0;
+    font-size: 22px;
     line-height: 20px;
+    letter-spacing: .5px; 
 }
-ul#sidebarList div a:last-child {
+ul#areaList a:last-child {
     margin-bottom: 6px;
 }
-ul#sidebarList#sidebarList div a:active {
-    color: var(--sdLinkColor);
-}
-
-ul#sidebarList a span {
+ul#areaList span {
+    display: inline-block;
+    font-family: 'Neris';
     font-size: 16px;
     margin-right: 8px;
-    transition: .7s font-size, .7s margin-right, .5s color;
+    transition: .5s transform, .5s color;
     color: var(--accentColor);
 }
-ul#sidebarList a:hover > span {
-    font-size: 12px;
-    font-family: 'Neris';
-    margin-right: 2px;
+ul#areaList a:hover > span {  
+    transform: translateX(10px) scale(0.95);
 }
-ul#sidebarList a:hover {
-    transform: translateX(20px) scale(1.05);
+ul#areaList a:hover {
+    transform: translateX(20px) scale(1.07); 
 }
-
+ul#areaList ins {
+    font-family: var(--addFont);
+}
 
 
 
 
 ul#riverList {
-    display: none;
-    position: relative;
-    width: -webkit-fill-available;
-    list-style: none;
-    padding: 0; 
-    overflow: auto;
-    padding-right: 4px;
-    font-family: var(--mainFont);
-}
-ul#riverList::-webkit-scrollbar {
-    width: 7px;
-    background: var(--accentColor);
-}
-ul#riverList::-webkit-scrollbar-thumb { 
-    background: var(--sdThumbBgc); 
-}
-ul#riverList > li {
-    background: var(--sdListBgc);
-    margin: 4px 0;
-    border-radius: 4px;
-    padding: 4px 10px;
-
-     
-}
-ul#riverList > li:first-child {
-    margin: 0;
-    margin-bottom: 4px;
-}
-ul#riverList > li:last-child {
-    margin: 0;
-    margin-top: 4px;
-}
+    display: none; 
+}  
 ul#riverList a {
-    font-size: 18px;
+    font-size: 22px;
     color: var(--sdLinkColor);
     font-weight: 900;
-}
-ul#riverList a:active {
-    color: var(--sdLinkColor);
-}
+    font-family: var(--addFont);
+    letter-spacing: .5px;
+} 
 ul#riverList mark {
     background: #ffa0b6b0;
 }
 
 
 
-.sidebar-input-wrapper {
+
+
+
+div.sidebar-input-wrapper {
     width: -webkit-fill-available;
     /* height: 28px;
     min-height: 28px; */
@@ -196,7 +172,8 @@ ul#riverList mark {
     overflow: hidden;
     position: relative;
     font-size: 26px;
-    margin-bottom: -10px;
+    margin-bottom: -6px;
+    font-weight: 900;
 }
 
 
@@ -204,6 +181,7 @@ ul#riverList mark {
     color:var(--sdPlaceholder);
     font-family: var(--addFont);
     font-size: 30px;
+    font-weight: 100;
 }
 
 span.input-btn {
@@ -223,27 +201,26 @@ span.input-btn {
     align-self: end;
     font-weight: var(--sdFontWeight);
 } 
-aside span.input-counter { 
-    font-size: 14px;
-    padding: 0px 12px;
-    padding-bottom: 4px;
-}
 span.input-btn:last-child {
     margin-right: 0;
     height: 21px;
     padding-bottom: 6px;
 }
-
-
-
-
-
-
-
-
-
-
-
-ins {
-    font-family: var(--addFont);
+span.input-counter { 
+    font-size: 14px;
+    padding: 0px 12px;
+    padding-bottom: 4px;
+    width: auto;
 }
+
+
+
+
+
+
+
+
+
+
+
+
