--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -1,26 +1,21 @@
 aside {
+    display: flex;
+    flex-direction: column; 
+    justify-content: flex-start;
+    align-items: center;
+
+    width: 37%;
+    min-width: 320px; 
+    max-width: 490px;
+    height: calc(100% - 80px);
     min-height: calc(100% - 80px);
     max-height: calc(100% - 80px);
-    height: calc(100% - 80px);
-    padding: 40px 0;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
 
-    /* padding: 0 40px; */
-    background: #7c7c7c40;
-    justify-content: center;
-    min-width: 320px;
-    color: #444;
-    box-shadow: -7px -9px 20px 0px #000;
+    padding: 40px 0;
+ 
     background: var(--sdBackground);
     color: var(--accentColor);
-
-    flex-direction: column; 
-    width: 37%; 
-    align-items: center;
-    justify-content: flex-start;
-    max-width: 490px;
+    box-shadow: -7px -9px 20px 0px #000;
 } 
 aside > * {
     margin: 0 10% 0 15%;
@@ -31,43 +26,36 @@ aside > * {
 
 
 
-ul#areaList, 
-ul#riverList {
+aside ul {
     position: relative;
     width: -webkit-fill-available; 
-    list-style: none;
+    
     padding: 0;  
-    overflow: auto;
     padding-right: 4px;
+
+    list-style: none;
+    overflow: auto;
 }
-ul#areaList::-webkit-scrollbar,
-ul#riverList::-webkit-scrollbar {
+aside ul::-webkit-scrollbar {
     width: 7px;
     background: var(--accentColor);
 }
-ul#areaList::-webkit-scrollbar-thumb,
-ul#riverList::-webkit-scrollbar-thumb  { 
+aside ul::-webkit-scrollbar-thumb { 
     background: var(--sdThumbBgc); 
 }
-ul#areaList > li, 
-ul#riverList > li {
-    background: var(--sdListBgc);
-    margin: 4px 0;
-    border-radius: 4px;
+aside ul > li { 
+    margin: 4px 0; 
     padding: 4px 10px; 
+    background: var(--sdListBgc);
+    border-radius: 4px;
 }
-ul#areaList > li:first-child,
-ul#riverList > li:first-child {
-    margin: 0;
-    margin-bottom: 4px;
+aside ul > li:first-child {
+    margin-top: 0; 
 }
-ul#areaList > li:last-child, 
-ul#riverList > li:last-child {
-    margin: 0;
-    margin-top: 4px;
+aside ul > li:last-child {
+    margin-bottom: 0; 
 }
-ul#areaList a:active,
-ul#riverList a:active {
+aside ul a:active {
     color: var(--sdLinkColor);
 }
 
@@ -75,47 +63,55 @@ ul#riverList a:active {
 
 ul#areaList h6 {
     display: flex;
+
     width: 100%;
+
     margin: 0;
     padding: 0;
+
+    color: var(--accentColor);
     font-size: 20px;
     font-weight: var(--sdFontWeight);
     font-family: var(--mainFont);
-    color: var(--accentColor);
-
 }
 ul#areaList div {
     display: flex;
+    flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    flex-direction: column;
 
     max-height: 0;
+
     margin: 0px 37px 0 25px;
     
     overflow: hidden;
     transition: max-height .6s;
 }
 ul#areaList a {
-    color: var(--sdLinkColor);
-    font-weight: 900;
-    text-decoration: none;
-    transition: .2s transform, 0s filter;
     margin: 2px 0;
+
+    color: var(--sdLinkColor);
     font-size: 22px;
+    font-weight: 900;
     line-height: 20px;
     letter-spacing: .5px; 
+
+    text-decoration: none;
+    transition: .2s transform, 0s filter;
 }
 ul#areaList a:last-child {
     margin-bottom: 6px;
 }
 ul#areaList span {
     display: inline-block;
+
+    margin-right: 8px;
+
+    color: var(--accentColor);
     font-family: 'Neris';
     font-size: 16px;
-    margin-right: 8px;
+    
     transition: .5s transform, .5s color;
-    color: var(--accentColor);
 }
 ul#areaList a:hover > span {  
     transform: translateX(10px) scale(0.95);
@@ -134,14 +130,14 @@ ul#riverList {
     display: none; 
 }  
 ul#riverList a {
-    font-size: 22px;
     color: var(--sdLinkColor);
+    font-size: 22px;
     font-weight: 900;
     font-family: var(--addFont);
     letter-spacing: .5px;
 } 
 ul#riverList mark {
-    background: #ffa0b6b0;
+    background: #ffa0b6b0; 
 }
 
 
@@ -150,30 +146,33 @@ ul#riverList mark {
 
 
 div.sidebar-input-wrapper {
-    width: -webkit-fill-available;
-    /* height: 28px;
-    min-height: 28px; */
-    margin-bottom: 30px;
     position: relative;
     display: flex;
     justify-content: flex-start;
     align-items: center;
+
+    width: -webkit-fill-available;
+
+    margin-bottom: 30px;
+    
     border-bottom: 4px solid var(--accentColor);
 }
 #searchInput {
+    position: relative;
     flex: 1;
-    border: none;
-    font-size: 20px;
+    
+    padding: 6px 2px;
+    margin-bottom: -6px;
+
+    color: var(--accentColor);
+    font-size: 26px; 
+    font-family: var(--addFont); 
+    font-weight: 900;
+
     outline: none;
     background: none;
-    font-family: var(--addFont);
-    color: var(--accentColor);
-    padding: 6px 2px;
+    border: none;
     overflow: hidden;
-    position: relative;
-    font-size: 26px;
-    margin-bottom: -6px;
-    font-weight: 900;
 }
 
 
@@ -185,32 +184,34 @@ div.sidebar-input-wrapper {
 }
 
 span.input-btn {
-    border-radius: 3px;
-    background: var(--sdListBgc);
-    content: '';
-    width: 27px;
-    height: 23px;
-    padding-bottom: 4px;
-    margin: 0px 1px;
     display: flex;
     justify-content: center;
     align-items: center;
+    align-self: end;
+
+    width: 27px;
+    height: 23px;
+
+    padding-bottom: 4px;
+    margin: 0px 1px 2px 1px;
+
+    border-radius: 3px;
+    background: var(--sdListBgc);
+
     font-size: 20px;
     font-family: 'Neris';
-    margin-bottom: 2px;
-    align-self: end;
     font-weight: var(--sdFontWeight);
 } 
 span.input-btn:last-child {
-    margin-right: 0;
     height: 21px;
+    margin-right: 0;
     padding-bottom: 6px;
 }
 span.input-counter { 
+    width: auto;
     font-size: 14px;
     padding: 0px 12px;
     padding-bottom: 4px;
-    width: auto;
 }
 
 
