--- a/styles/header.css
+++ b/styles/header.css
@@ -18,7 +18,9 @@ header {
 
     background: var(--headerBgc);
     color: var(--accentColor);
-    box-shadow: 0px 1px 14px -7px #000;
+    box-shadow: 0px 1px 14px -7px #727272;
+
+    z-index: 2;
 }
  
 
@@ -112,8 +114,7 @@ div.header-mobile-scroll button {
     transition: .45s all;
 } 
 div.header-controls button:hover {
-    background: var(--headerHoverBcg);
-    color: var(--revertColor); 
+    background: var(--headerHoverBcg); 
 } 
 div.header-controls button.active-btn {
     background: var(--headerButtonBgc);
