--- a/styles/header.css
+++ b/styles/header.css
@@ -18,7 +18,7 @@ header {
 
     background: var(--headerBgc);
     color: var(--accentColor);
-    box-shadow: 0px 1px 14px -7px #727272;
+    box-shadow: var(--headerShadow);
 
     z-index: 2;
 }
