--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -15,7 +15,7 @@ aside {
  
     background: var(--sdBackground);
     color: var(--accentColor);
-    box-shadow: -6px -9px 16px 0px #939393;
+    box-shadow: var(--headerShadow);
 
     z-index: 1;
 } 
