--- a/styles/index.css
+++ b/styles/index.css
@@ -26,11 +26,25 @@ main {
     flex-direction: row; 
     justify-content: flex-start;
     align-items: center;
-    background: var(--mainBackground);
-    
-    flex: 1;
+
+    background-color: #fef9f2;
+
+    flex: 1; 
     overflow: hidden;
 }
+main::before {
+    content: '';
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
+    
+    background: linear-gradient(180deg, #484848, #15151e);
+    
+    opacity: var(--main-opacity); 
+}
+
+
  article {
     
     z-index: 0;
